bin/testsuite/tests/compiler/src/errors/compiler3376.swg
#global testerror "Err0600"
func toto(x: { a, b: s32 }) {}

#test
{
    toto({1, 2, 3})
}
